cambio de ventanas

--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Pridi&display=swap" rel="stylesheet">
 </head>
 <body>
+
+    <button><a href="contact.html">Contact us</a></button>
+    
     <!-- Advertisement -->
     <div id="advertisement">
         <div class="logo">
@@ -135,8 +138,9 @@
             <button class="back"><img src="./src/img/back-icon.png" alt="Back icon"></button>
         </div>  
     </div>
+
     <!-- Contact Us -->
-    <div id="contactUs">
+    <!-- <div id="contactUs">
         <div class="logo">
             <img src="./src/img/iso-icon.png" alt="">
         </div>
@@ -165,7 +169,9 @@
         <div id="backCU">
             <button class="back"><img src="./src/img/back-icon.png" alt="Back icon"></button>
         </div>  
-    </div>
+    </div> -->
+
+
     <!-- Credits -->
     <div id="credits">
         <div class="logo">
