--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body>
 
     <button><a href="contact.html">Contact us</a></button>
-    
+    <button><a href="about.html">About us</a></button>
     <!-- Advertisement -->
     <div id="advertisement">
         <div class="logo">
@@ -57,10 +57,10 @@
         </div>
 
         <div id="play">
-            <button><img src="./src/img/play-icon.png" alt="Play button"></button>
+            <button><a href="escena1.html"><img src="./src/img/play-icon.png" alt="Play button"></a></button>
         </div>
     </div>
-    <!-- About Us -->
+    <!-- About Us
     <div id="aboutUs">
         <div class="logo">
             <img src="./src/img/iso-icon.png" alt="">
@@ -137,7 +137,7 @@
         <div id="backAU">
             <button class="back"><img src="./src/img/back-icon.png" alt="Back icon"></button>
         </div>  
-    </div>
+    </div> -->
 
     <!-- Contact Us -->
     <!-- <div id="contactUs">
