--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" type="text/css" href="./src/css/main.css">
+	<meta charset="utf-8">
+	<meta name="keywords" content="historia interactiva, interactive story, videojuego de aventura, adventure game">
+    <!--(Esto son keywords para el SEO)-->
+	<meta name="description" content="Para personas que busquen una experiencia tranquila, que les gusten las historias fantasticas.">
+	<!--(Esta es la descripcion de la pagina)-->
+    <meta name="author" content="Rey Valentín Arias Pérez, Daniel Alejandro Arango Echeverri, Adrián Saldarriaga Marín, Nicolás Vélez Ramírez">
+	<meta name="robots" content="index">
+	<link rel="icon" href="./src/img/logo-icon.png">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Pridi&display=swap" rel="stylesheet">
 
 </head>
 <body>
