--- a/escena1.html
+++ b/escena1.html
@@ -11,5 +11,7 @@
     <div id="backCU">
         <button class="back"><a href="index.html"><img src="./src/img/back-icon.png" alt="Back icon"></a></button>
     </div> 
+    <button><a href="win.html">Win</a></button>
+    <button><a href="die.html">Die</a></button>
 </body>
 </html>
