--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 
 
     <!-- Credits -->
-    <div id="credits">
+    <!-- <div id="credits">
         <div class="logo">
             <img src="./src/img/iso-icon.png" alt="">
         </div>
@@ -211,7 +211,7 @@
         <div id="thanks">
             <h4 class="title">¡Gracias por jugar!</h4>
         </div>
-    </div>
+    </div> -->
     <!-- Pop-Up Tip-Hint -->
     <div class="hint">
         <div id="exclamation">
@@ -240,7 +240,7 @@
     <div class="scene">
     </div>
     <!-- You Win -->
-    <div id="youWin">
+    <!-- <div id="youWin">
         <div id="titleYW">
             <h2 class="title">Has ganado</h2>
         </div>
@@ -252,9 +252,9 @@
         <div id="continue">
             <button class="yButton">Continuar</button>
         </div>
-    </div>
+    </div> -->
     <!-- You Died -->
-    <div id="youDied">
+    <!-- <div id="youDied">
         <div id="titleYD">
             <h2 class="title">Has muerto</h2>
         </div>
@@ -266,7 +266,7 @@
         <div id="retry">
             <button class="yButton">Volver a intentar</button>
         </div>
-    </div>
+    </div> -->
     
 
     <ul id="list">
