--- a/creditos.html
+++ b/creditos.html
@@ -44,6 +44,8 @@
         <div id="thanks">
             <h4 class="title">¡Gracias por jugar!</h4>
         </div>
+
+        <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus dignissimos magnam aliquid, quo adipisci ab inventore perspiciatis quam molestiae tempora itaque esse dolorem eum harum dolorum dolores perferendis sunt cumque!</h3>
     </div>
 </body>
 </html>
