--- a/escenas/escena3.html
+++ b/escenas/escena3.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="./src/css/main.css">
     <style>
       body {
-        background-image: url('src/img/museo_1.png');
+        background-image: url('src/img/museo_3.png');
         background-size: cover;
         background-repeat: no-repeat;
         background-attachment: fixed;
@@ -37,8 +37,8 @@
 </head>
 <body>
   <div class="button-container">
-    <a href="escenas/escena2.html"><button class="button"><img src="src/img/next-iconright.png" width="100%"></button></a>
-    <a href="escenas/escena3.html"><button class="button2"><img src="src/img/next-icondown.png" width="100%"></button></a>
+    <a href="escenas/escena1.html"><button class="button"><img src="src/img/next-iconup.png" width="100%"></button></a>
+    <a href="escenas/escena4.html"><button class="button2"><img src="src/img/next-iconright.png" width="100%"></button></a>
   </div>
 </body>
 </html>
