Avance con paginas
Se avanza agregando más páginas de escenas

--- a/escenas/escena1.html
+++ b/escenas/escena1.html
@@ -4,23 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Escena 1</title>
-    <link rel="stylesheet" type="text/css" href="./src/css/main.css">
+    <link rel="stylesheet" type="text/css" href="../src/css/main.css">
     <style>
       body {
-        background-image: url('src/img/museo_1.png');
+        background-image: url('../src/img/museo_1.png');
         background-size: cover;
         background-repeat: no-repeat;
         background-attachment: fixed;
       }
     
-      .button-container {
-        position: absolute;
-        left: 20px;
-        top: 20px;
-      }
-    
       .button {
-        right: auto;
         border: none;
         cursor: pointer;
         background-color: transparent;
@@ -36,9 +29,12 @@
     </style>
 </head>
 <body>
-  <div class="button-container">
-    <a href="escenas/escena2.html"><button class="button"><img src="src/img/next-iconright.png" width="100%"></button></a>
-    <a href="escenas/escena3.html"><button class="button2"><img src="src/img/next-icondown.png" width="100%"></button></a>
+  <div id="div1escena">
+    <a href="escena2.html"><button class="button"><img src="../src/img/next-iconright.png" width="100%"></button></a>
+  </div>
+  <div id="div2escena"></div>
+  <div id="div3escena">
+    <a href="escena3.html"><button class="button2"><img src="../src/img/next-icondown.png" width="100%"></button></a>
   </div>
 </body>
 </html>
