--- a/escenas/escena2.html
+++ b/escenas/escena2.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Escena 2</title>
-    <link rel="stylesheet" type="text/css" href="./src/css/main.css">
+    <link rel="stylesheet" type="text/css" href="../src/css/main.css">
     <style>
       body {
-        background-image: url('src/img/museo_2.png');
+        background-image: url('../src/img/museo_2.png');
         background-size: cover;
         background-repeat: no-repeat;
         background-attachment: fixed;
@@ -36,8 +36,8 @@
 </head>
 <body>
   <div class="button-container">
-    <a href="escenas/escena1.html"><button class="button"><img src="src/img/next-iconleft.png" width="100%"></button></a>
-    <a href="escenas/escena4.html"><button class="button2"><img src="src/img/next-iconright.png" width="100%"></button></a>
+    <a href="escena1.html"><button class="button"><img src="../src/img/next-iconleft.png" width="100%"></button></a>
+    <a href="escena5.html"><button class="button2"><img src="../src/img/next-iconright.png" width="100%"></button></a>
   </div>
 </body>
 </html>
