--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </div>
 
         <div id="play">
-            <button><a href="escena1.html"><img src="./src/img/play-icon.png" alt="Play button"></a></button>
+            <button><a href="escenas/escena1.html"><img src="./src/img/play-icon.png" alt="Play button"></a></button>
         </div>
     </div>
     <!-- About Us
