--- a/escenas/escena10.html
+++ b/escenas/escena10.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="../src/css/main.css">
     <style>
       body {
-        background-image: url('../src/img/mainScreen.jpg');
+        background-image: url('../src/img/scene1.png');
         background-size: cover;
         background-repeat: no-repeat;
         background-attachment: fixed;
@@ -37,7 +37,7 @@
 </head>
 <body>
   <div class="button-container">
-    <a href="escena10.html"><button class="button"><img src="../src/img/next-iconright.png" width="100%"></button></a>
+    <a href="escena11.html"><button class="button"><img src="../src/img/next-iconright.png" width="100%"></button></a>
   </div>
 </body>
 </html>
