--- a/escenas/escena2.html
+++ b/escenas/escena2.html
@@ -13,12 +13,6 @@
         background-attachment: fixed;
       }
     
-      .button-container {
-        position: absolute;
-        left: 20px;
-        top: 20px;
-      }
-    
       .button {
         border: none;
         cursor: pointer;
@@ -35,8 +29,10 @@
     </style>
 </head>
 <body>
-  <div class="button-container">
+  <div id="div3escena">
     <a href="escena1.html"><button class="button"><img src="../src/img/next-iconleft.png" width="100%"></button></a>
+  </div>
+    <div id="div1escena">
     <a href="escena5.html"><button class="button2"><img src="../src/img/next-iconright.png" width="100%"></button></a>
   </div>
 </body>
