--- a/escenas/escena3.html
+++ b/escenas/escena3.html
@@ -36,8 +36,10 @@
     </style>
 </head>
 <body>
-  <div class="button-container">
+  <div id="div4escena">
     <a href="escena1.html"><button class="button"><img src="../src/img/next-iconup.png" width="100%"></button></a>
+  </div>
+    <div id="div1escena">
     <a href="escena4.html"><button class="button2"><img src="../src/img/next-iconright.png" width="100%"></button></a>
   </div>
 </body>
