--- a/die.html
+++ b/die.html
@@ -16,7 +16,7 @@
         </div>
 
         <div id="retry">
-            <button class="yButton"><a href="escena1.html">Volver a intentar</a></button>
+            <button class="yButton"><a href="escenas/escena1.html">Volver a intentar</a></button>
         </div>
     </div>
 </body>
