--- a/escenas/escena4.html
+++ b/escenas/escena4.html
@@ -43,8 +43,10 @@
     </style>
 </head>
 <body>
-  <div class="button-container">
+  <div id="div3escena">
     <a href="escena3.html   "><button class="button2"><img src="../src/img/next-iconleft.png" width="100%"></button></a>
+  </div>
+    <div id="div1escena">
     <a href="escena6.html"><button class="button3"><img src="../src/img/next-iconright.png" width="100%"></button></a>
   </div>
 </body>
