--- a/escenas/escena5.html
+++ b/escenas/escena5.html
@@ -43,10 +43,16 @@
     </style>
 </head>
 <body>
-  <div class="button-container">
+  <div id="div4escena">
     <a href="escena6.html"><button class="button"><img src="../src/img/next-iconup.png" width="100%"></button></a>
+  </div>
+    <div id="div2escena">
     <a href="escena7.html"><button class="button2"><img src="../src/img/next-icondown.png" width="100%"></button></a>
+  </div>
+    <div id="div3escena">
     <a href="escena2.html"><button class="button3"><img src="../src/img/next-iconleft.png" width="100%"></button></a>
+  </div>
+    <div id="div1escena">
     <a href="escena8.html"><button class="button3"><img src="../src/img/next-iconright.png" width="100%"></button></a>
   </div>
 </body>
