--- a/escenas/escena6.html
+++ b/escenas/escena6.html
@@ -36,7 +36,7 @@
     </style>
 </head>
 <body>
-  <div class="button-container">
+  <div id="div2escena">
     <a href="escena5.html"><button class="button2"><img src="../src/img/next-icondown.png" width="100%"></button></a>
   </div>
 </body>
