--- a/escenas/escena8.html
+++ b/escenas/escena8.html
@@ -36,8 +36,10 @@
     </style>
 </head>
 <body>
-  <div class="button-container">
+  <div id="div1escena">
     <a href="escena9.html"><button class="button"><img src="../src/img/next-iconright.png" width="100%"></button></a>
+  </div>
+    <div id="div3escena">
     <a href="escena5.html"><button class="button2"><img src="../src/img/next-iconleft.png" width="100%"></button></a>
   </div>
 </body>
