--- a/escenas/escena9.html
+++ b/escenas/escena9.html
@@ -36,7 +36,7 @@
     </style>
 </head>
 <body>
-  <div class="button-container">
+  <div id="div1escena">
     <a href="escena10.html"><button class="button"><img src="../src/img/next-iconright.png" width="100%"></button></a>
   </div>
 </body>
