Main screen agregada
Se cambia la pantalla de fondo del main

--- a/index.html
+++ b/index.html
@@ -20,6 +20,15 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Pridi&display=swap" rel="stylesheet">
+
+    <style>
+        body {
+          background-image: url('src/img/main_screen.png');
+          background-size: cover;
+          background-repeat: no-repeat;
+          background-attachment: fixed;
+        }
+    </style>
 </head>
 <body>
 
@@ -53,11 +62,11 @@
         </div>
 
         <div id="dropDown">
-            <button><img src="./src/img/menu-icon.png" alt="Dropdown button"></button>
+            <button style="background-color: transparent; border: none;"><img src="./src/img/menu-icon.png" alt="Dropdown button"></button>
         </div>
 
         <div id="play">
-            <button><a href="escenas/escena1.html"><img src="./src/img/play-icon.png" alt="Play button"></a></button>
+            <button style="background-color: transparent; border: none;"><a href="escenas/escena1.html"><img src="./src/img/play-icon.png" alt="Play button"></a></button>
         </div>
     </div>
     <!-- About Us
