Se agregan más escenas
Se agregan más escenas con sus respectivos botones

--- a/escenas/escena16.html
+++ b/escenas/escena16.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Escena 9</title>
+    <title>Escena 10</title>
     <link rel="stylesheet" type="text/css" href="../src/css/main.css">
     <style>
       body {
-        background-image: url('../src/img/FachadaMansion.jpg');
+        background-image: url('../src/img/MansionCuadro2.jpg');
         background-size: cover;
         background-repeat: no-repeat;
         background-attachment: fixed;
@@ -36,8 +36,11 @@
     </style>
 </head>
 <body>
-  <div id="div1escena">
-    <a href="escena10.html"><button class="button"><img src="../src/img/next-iconright.png" width="100%"></button></a>
+  <div id="div4escena">
+    <a href="escena11.html"><button class="button"><img src="../src/img/next-iconup.png" width="100%"></button></a>
+  </div>
+  <div id="div3escena">
+    <a href="escena13.html"><button class="button"><img src="../src/img/next-iconleft.png" width="100%"></button></a>
   </div>
 </body>
 </html>
