--- a/escenas/escena10.html
+++ b/escenas/escena10.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="../src/css/main.css">
     <style>
       body {
-        background-image: url('../src/img/scene1.png');
+        background-image: url('../src/img/Mansion1.jpg');
         background-size: cover;
         background-repeat: no-repeat;
         background-attachment: fixed;
@@ -38,6 +38,12 @@
 <body>
   <div id="div1escena">
     <a href="escena11.html"><button class="button"><img src="../src/img/next-iconright.png" width="100%"></button></a>
+  </div>
+  <div id="div4escena">
+    <a href="escena12.html"><button class="button"><img src="../src/img/next-iconup.png" width="100%"></button></a>
+  </div>
+  <div id="div2escena">
+    <a href="escena13.html"><button class="button"><img src="../src/img/next-icondown.png" width="100%"></button></a>
   </div>
 </body>
 </html>
