--- a/escenas/escena11.html
+++ b/escenas/escena11.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="../src/css/main.css">
     <style>
       body {
-        background-image: url('../src/img/scene3.png');
+        background-image: url('../src/img/MansionCuadro1.jpg');
         background-size: cover;
         background-repeat: no-repeat;
         background-attachment: fixed;
@@ -37,7 +37,16 @@
 </head>
 <body>
   <div id="div1escena">
-    <a href="escena12.html"><button class="button"><img src="../src/img/next-iconright.png" width="100%"></button></a>
+    <a href="../die.html"><button class="button"><img src="../src/img/next-iconright.png" width="100%"></button></a>   
+  </div>
+  <div id="div2escena">
+    <a href="escena16.html"><button class="button"><img src="../src/img/next-icondown.png" width="100%"></button></a>    
+  </div>
+  <div id="div3escena">
+    <a href="escena10.html"><button class="button"><img src="../src/img/next-iconleft.png" width="100%"></button></a>    
+  </div>
+  <div id="div4escena">
+    <a href="escena14.html"><button class="button"><img src="../src/img/next-iconup.png" width="100%"></button></a>    
   </div>
 </body>
 </html>
