--- a/escenas/escena12.html
+++ b/escenas/escena12.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Escena 9</title>
+    <title>Escena 10</title>
     <link rel="stylesheet" type="text/css" href="../src/css/main.css">
     <style>
       body {
-        background-image: url('../src/img/FachadaMansion.jpg');
+        background-image: url('../src/img/Mansion3.jpg');
         background-size: cover;
         background-repeat: no-repeat;
         background-attachment: fixed;
@@ -37,7 +37,10 @@
 </head>
 <body>
   <div id="div1escena">
-    <a href="escena10.html"><button class="button"><img src="../src/img/next-iconright.png" width="100%"></button></a>
+    <a href="escena14.html"><button class="button"><img src="../src/img/next-iconright.png" width="100%"></button></a>
+  </div>
+  <div id="div2escena">
+    <a href="escena10.html"><button class="button"><img src="../src/img/next-icondown.png" width="100%"></button></a>
   </div>
 </body>
 </html>
