pequeño cambio escenas
pequeño cambio escenas de win die

--- a/escenas/escena14.html
+++ b/escenas/escena14.html
@@ -37,7 +37,7 @@
 </head>
 <body>
   <div id="div1escena">
-    <a href="escena17.html"><button class="button"><img src="../src/img/next-iconright.png" width="100%"></button></a>
+    <a href="../win.html"><button class="button"><img src="../src/img/next-iconright.png" width="100%"></button></a>
   </div>
   <div id="div3escena">
     <a href="escena12.html"><button class="button"><img src="../src/img/next-iconleft.png" width="100%"></button></a>
