--- a/escenas/escena1.html
+++ b/escenas/escena1.html
@@ -49,7 +49,7 @@
   
   <div id="advertisement">
     <div class="logo">
-        <img src="./src/img2/iso-icon.png" alt="">
+        <img src="./src/img/iso-icon.png" alt="">
     </div>
     
     <div id="titleA">
