--- a/escenas/escena1.html
+++ b/escenas/escena1.html
@@ -18,7 +18,7 @@
       }
     }
       body {
-        background-image: url('../src/img/museo_1.png');
+        background-image: url('../src/img/MuseoChat1.png');
         background-size: cover;
         background-repeat: no-repeat;
         background-attachment: fixed;
