Revert "Cambio experimental"
This reverts commit cbbe8aee0c2fd42566db9730123d0dba3d392d66.

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <img src="./src/img/iso-icon.png" alt="">
         </div>
         <div id="gameName">
-            <h1 class="title">THIEF</h1>
+            <h1 class="title">Historia interactiva</h1>
         </div>
 
         <div id="dropDown">
