--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <img src="./src/img/iso-icon.png" alt="">
         </div>
         <div id="gameName">
-            <h1 class="title">Historia interactiva</h1>
+            <h1 class="title">Historia THIEF</h1>
         </div>
 
         <div id="dropDown">
