Estructuración completa de la vista About us, corrección del fondo de Contact us y correcciones en la hoja de estilos main.css

--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Contact us</title>
     <link rel="stylesheet" type="text/css" href="./src/css/main.css">
 	<meta charset="utf-8">
 	<meta name="keywords" content="historia interactiva, interactive story, videojuego de aventura, adventure game">
@@ -20,6 +20,21 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Pridi&display=swap" rel="stylesheet">
 
+    <style>
+        body {
+          background-image: url('src/img/main_screen.png');
+          background-size: contain;
+          background-repeat: no-repeat;
+          background-attachment: fixed;
+        }
+
+        #titleCU{
+            background-color: #ffffff8c;
+            border: 1px;
+            border-radius: 20px;
+            margin-bottom: 10px;
+        }
+    </style>
 </head>
 <body>
 
