--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <style>
         body {
           background-image: url('src/img/thief.png');
-          background-size: cover;
+          background-size: contain;
           background-repeat: no-repeat;
           background-attachment: fixed;
         }
