Se agregaron las escenas de Intro y cambio en las escenas principales

--- a/escenas/Princ_Derecha.html
+++ b/escenas/Princ_Derecha.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Escena 8</title>
+    <title>Escena Principal Derecha</title>
     <link rel="stylesheet" type="text/css" href="../src/css/main.css">
     <style>
       body {
-        background-image: url('../src/img/museo_5.png');
+        background-image: url('../src/img/museo_4.png');
         background-size: cover;
         background-repeat: no-repeat;
         background-attachment: fixed;
@@ -36,11 +36,11 @@
     </style>
 </head>
 <body>
-  <div id="div1escena">
-    <a href="escena9.html"><button class="button"><img src="../src/img/next-iconright.png" width="100%"></button></a>
+  <div id="div4escena">
+    <a href="Princ_Derecha_cuadro.html"><button class="button"><img src="../src/img/next-iconup.png" width="100%"></button></a>
   </div>
     <div id="div3escena">
-    <a href="escena5.html"><button class="button2"><img src="../src/img/next-iconleft.png" width="100%"></button></a>
+    <a href="Principal.html"><button class="button2"><img src="../src/img/next-iconleft.png" width="100%"></button></a>
   </div>
 </body>
 </html>
