--- a/escenas/Princ_Derecha_cuadro.html
+++ b/escenas/Princ_Derecha_cuadro.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Escena 7</title>
+    <title>Escena Principal Derecha Cuadro</title>
     <link rel="stylesheet" type="text/css" href="../src/css/main.css">
     <style>
       body {
-        background-image: url('../src/img/museo_obra_robada_3.png');
+        background-image: url('../src/img/museo_obra_robada_2.png'); 
         background-size: cover;
         background-repeat: no-repeat;
         background-attachment: fixed;
@@ -17,14 +17,6 @@
         position: absolute;
         left: 20px;
         top: 20px;
-      }
-    
-      .button {
-        right: auto;
-        border: none;
-        cursor: pointer;
-        background-color: transparent;
-        border: none;
       }
 
       .button2{
@@ -36,11 +28,8 @@
     </style>
 </head>
 <body>
-  <div id="div4escena">
-    <a href="escena5.html"><button class="button"><img src="../src/img/next-iconup.png" width="100%"></button></a>
-  </div>
-    <div id="div3escena">
-    <a href="escena4.html"><button class="button2"><img src="../src/img/next-iconleft.png" width="100%"></button></a>
+  <div id="div2escena">
+    <a href="Princ_Derecha.html"><button class="button2"><img src="../src/img/next-icondown.png" width="100%"></button></a>
   </div>
 </body>
 </html>
