--- a/escenas/Princ_Puerta_Secreta.html
+++ b/escenas/Princ_Puerta_Secreta.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Escena 10</title>
+    <title>Escena Principal Puerta Secreta</title>
     <link rel="stylesheet" type="text/css" href="../src/css/main.css">
     <style>
       body {
-        background-image: url('../src/img/Mansion1.jpg');
+        background-image: url('../src/img/museo_5.png');
         background-size: cover;
         background-repeat: no-repeat;
         background-attachment: fixed;
@@ -26,24 +26,15 @@
         background-color: transparent;
         border: none;
       }
-
-      .button2{
-        border: none;
-        cursor: pointer;
-        background-color: transparent;
-        border: none;
-      }
+      
     </style>
 </head>
 <body>
-  <div id="div1escena">
-    <a href="escena11.html"><button class="button"><img src="../src/img/next-iconright.png" width="100%"></button></a>
-  </div>
   <div id="div4escena">
-    <a href="escena12.html"><button class="button"><img src="../src/img/next-iconup.png" width="100%"></button></a>
+    <a href="FBI.html"><button class="button"><img src="../src/img/next-iconup.png" width="100%"></button></a>
   </div>
-  <div id="div2escena">
-    <a href="escena13.html"><button class="button"><img src="../src/img/next-icondown.png" width="100%"></button></a>
+  <div id="div1escena">
+    <a href="Princ_Izq_Izquierda.html"><button class="button"><img src="../src/img/next-iconright.png" width="100%"></button></a>
   </div>
 </body>
 </html>
