--- a/escenas/Principal.html
+++ b/escenas/Principal.html
@@ -34,7 +34,7 @@
 </head>
 <body>
   <div id="div3escena">
-    <a href="escena2.html"><button class="button3"><img src="../src/img/next-iconleft.png" width="100%"></button></a>
+    <a href="Princ_Izquierda.html"><button class="button3"><img src="../src/img/next-iconleft.png" width="100%"></button></a>
   </div>
     <div id="div1escena">
     <a href="Princ_Derecha.html"><button class="button3"><img src="../src/img/next-iconright.png" width="100%"></button></a>
