--- a/index.html
+++ b/index.html
@@ -318,6 +318,6 @@
         <li><a href="./credits.html">Credits</a></li>
     </ul>
 
-    <script src="./src/index.js"></script>
+    <script src="./src/js/index.js"></script>
 </body>
 </html>
