--- a/escenas/Princ_Izq_Izq_cuadro.html
+++ b/escenas/Princ_Izq_Izq_cuadro.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Escena 9</title>
+    <title>Escena Izq Izq Cuadro</title>
     <link rel="stylesheet" type="text/css" href="../src/css/main.css">
     <style>
       body {
-        background-image: url('../src/img/FachadaMansion.jpg');
+        background-image: url('../src/img/museo_obra_robada_3.png');
         background-size: cover;
         background-repeat: no-repeat;
         background-attachment: fixed;
@@ -26,18 +26,11 @@
         background-color: transparent;
         border: none;
       }
-
-      .button2{
-        border: none;
-        cursor: pointer;
-        background-color: transparent;
-        border: none;
-      }
     </style>
 </head>
 <body>
-  <div id="div1escena">
-    <a href="escena10.html"><button class="button"><img src="../src/img/next-iconright.png" width="100%"></button></a>
+  <div id="div4escena">
+    <a href="Princ_Izq_Izquierda.html"><button class="button"><img src="../src/img/next-iconup.png" width="100%"></button></a>
   </div>
 </body>
 </html>
