Cambios en los tamaños de las imagenes

--- a/escenas/FBI.html
+++ b/escenas/FBI.html
@@ -22,7 +22,7 @@
 </head>
 <body>
   <div class="skip_hint_section">
-    <a href="escena2.html"><img src="../src/img/skip.png" alt="Skip"></a>
+    <a href="FBI1.html"><img src="../src/img/skip.png" alt="Skip"></a>
   </div>
 
   
