--- a/escenas/Oficina_1.html
+++ b/escenas/Oficina_1.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Escena Izq Izq Cuadro</title>
+    <title>Escena Oficina 1</title>
     <link rel="stylesheet" type="text/css" href="../src/css/main.css">
     <style>
       body {
-        background-image: url('../src/img/museo_obra_robada_3.png');
-        background-size: contain;
+        background-image: url('../src/img/Oficina1.jpg');
+        background-size: cover;
         background-repeat: no-repeat;
         background-attachment: fixed;
       }
@@ -26,11 +26,18 @@
         background-color: transparent;
         border: none;
       }
+
+      .button2{
+        border: none;
+        cursor: pointer;
+        background-color: transparent;
+        border: none;
+      }
     </style>
 </head>
 <body>
   <div id="div4escena">
-    <a href="Princ_Izq_Izquierda.html"><button class="button"><img src="../src/img/next-iconup.png" width="100%"></button></a>
+    <a href="Oficina_2.html"><button class="button"><img src="../src/img/next-iconup.png" width="100%"></button></a>
   </div>
 </body>
 </html>
