--- a/escenas/Oficina_2.html
+++ b/escenas/Oficina_2.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Escena Izq Izq Cuadro</title>
+    <title>Escena Oficina 2</title>
     <link rel="stylesheet" type="text/css" href="../src/css/main.css">
     <style>
       body {
-        background-image: url('../src/img/museo_obra_robada_3.png');
+        background-image: url('../src/img/Computador.jpg');
         background-size: contain;
         background-repeat: no-repeat;
         background-attachment: fixed;
@@ -18,9 +18,8 @@
         left: 20px;
         top: 20px;
       }
-    
-      .button {
-        right: auto;
+
+      .button2{
         border: none;
         cursor: pointer;
         background-color: transparent;
@@ -29,8 +28,8 @@
     </style>
 </head>
 <body>
-  <div id="div4escena">
-    <a href="Princ_Izq_Izquierda.html"><button class="button"><img src="../src/img/next-iconup.png" width="100%"></button></a>
+  <div id="div2escena">
+    <a href="Oficina_1.html"><button class="button2"><img src="../src/img/next-icondown.png" width="100%"></button></a>
   </div>
 </body>
 </html>
