--- a/escenas/Princ_Derecha_cuadro.html
+++ b/escenas/Princ_Derecha_cuadro.html
@@ -9,7 +9,7 @@
     <style>
       body {
         background-image: url('../src/img/museo_obra_robada_2.png'); 
-        background-size: cover;
+        background-size: contain;
         background-repeat: no-repeat;
         background-attachment: fixed;
       }
