--- a/escenas/Principal.html
+++ b/escenas/Principal.html
@@ -19,7 +19,7 @@
     }
       body {
         background-image: url('../src/img/museo_2.png');
-        background-size: cover;
+        background-size: contain;
         background-repeat: no-repeat;
         background-attachment: fixed;
       }
