--- a/escenas/escena1.html
+++ b/escenas/escena1.html
@@ -9,7 +9,7 @@
       
       body {
         background-image: url('../src/img/museo.png');
-        background-size: cover;
+        background-size: contain;
         background-repeat: no-repeat;
         background-attachment: fixed;
       }
