--- a/escenas/escena2.html
+++ b/escenas/escena2.html
@@ -8,7 +8,7 @@
     <style>
       body {
         background-image: url('../src/img/MuseoChat1.png');
-        background-size: cover;
+        background-size: contain;
         background-repeat: no-repeat;
         background-attachment: fixed;
       }
