--- a/escenas/Princ_Izquierda_cuadro.html
+++ b/escenas/Princ_Izquierda_cuadro.html
@@ -62,6 +62,13 @@
           right: 10px;
           font-size: 34px;
       }
+
+      @media only screen and (max-height: 376px){
+        .element_key img{
+          left: 279px;
+          top: 210px;
+        }
+      }
     </style>
 </head>
 <body>
