--- a/escenas/Mansion_Principal_Izquierda.html
+++ b/escenas/Mansion_Principal_Izquierda.html
@@ -7,10 +7,11 @@
     <link rel="stylesheet" type="text/css" href="../src/css/main.css">
     <style>
       body {
-        background-image: url('../src/img/MansionCuadro2.jpg');
+        background-image: url('../src/img/Mansion2.jpg');
         background-size: cover;
         background-repeat: no-repeat;
         background-attachment: fixed;
+        background-position: center;
       }
     
       .button-container {
@@ -19,15 +20,7 @@
         top: 20px;
       }
     
-      .button {
-        right: auto;
-        border: none;
-        cursor: pointer;
-        background-color: transparent;
-        border: none;
-      }
-
-      .button2{
+      .button3{
         border: none;
         cursor: pointer;
         background-color: transparent;
@@ -36,11 +29,8 @@
     </style>
 </head>
 <body>
-  <div id="div4escena">
-    <a href="escena11.html"><button class="button"><img src="../src/img/next-iconup.png" width="100%"></button></a>
-  </div>
-  <div id="div3escena">
-    <a href="escena13.html"><button class="button"><img src="../src/img/next-iconleft.png" width="100%"></button></a>
+    <div id="div1escena">
+    <a href="Mansion_Principal.html"><button class="button3"><img src="../src/img/next-iconright.png" width="100%"></button></a>
   </div>
 </body>
 </html>
