--- a/escenas/Princ_Derecha_cuadro.html
+++ b/escenas/Princ_Derecha_cuadro.html
@@ -68,6 +68,13 @@
           right: 10px;
           font-size: 34px;
       }
+
+      @media only screen and (max-height: 376px){
+        .element_key img{
+          left: 239px;
+          top: 210px;
+        }
+      }
         
     </style>
 </head>
