Modificación tamaños de las imagenes y funcionalidad de fin del juego

--- a/escenas/escena5.html
+++ b/escenas/escena5.html
@@ -11,6 +11,7 @@
         background-size: contain;
         background-repeat: no-repeat;
         background-attachment: fixed;
+        background-position: center;
       }
 
       .skip_hint_section img{
