--- a/escenas/Princ_Izquierda_cuadro.html
+++ b/escenas/Princ_Izquierda_cuadro.html
@@ -11,6 +11,7 @@
         background-size: contain;
         background-repeat: no-repeat;
         background-attachment: fixed;
+        background-position: center;
       }
     
       .button {
