--- a/escenas/Principal.html
+++ b/escenas/Principal.html
@@ -22,6 +22,7 @@
         background-size: contain;
         background-repeat: no-repeat;
         background-attachment: fixed;
+        background-position: center;
       }
     
       .button3{
