--- a/escenas/TheEnd.html
+++ b/escenas/TheEnd.html
@@ -8,7 +8,7 @@
     <style>
       body {
         background-image: url('../src/img/tobecontinued.png');
-        background-size: contain;
+        background-size: cover;
         background-repeat: no-repeat;
         background-attachment: fixed;
       }
@@ -19,8 +19,17 @@
         width: 19%;
       }
 
+      div{
+        width: 100%;
+        height: 400px;
+      }
+
     </style>
 </head>
 <body>
+  <div></div>
+  <script>
+    document.querySelector("div").addEventListener("click", () => {location.href = "../index.html"})
+  </script>
 </body>
 </html>
