--- a/escenas/escena4.html
+++ b/escenas/escena4.html
@@ -15,7 +15,7 @@
       }
       .skip_hint_section img{
         position: fixed;
-        right: 0;
+        right: 20px;
         width: 19%;
       }
 
