--- a/escenas/escena5.html
+++ b/escenas/escena5.html
@@ -16,7 +16,7 @@
 
       .skip_hint_section img{
         position: fixed;
-        right: 0;
+        right: 20px;
         width: 19%;
       }
 
